--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gerenciador de Cursos</title>
+    <title>PACTIC 2026 - Planejamnto de Capacitações</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
